# relational_types

./: Cargo.toml  LICENSE  README.md
.github/workflows/: auto-tagging.yml  continuous-integration.yml  publish.yml
relational_types_procmacro/: Cargo.toml
relational_types_procmacro/src/: lib.rs
relational_types_procmacro_tests/: Cargo.toml
relational_types_procmacro_tests/tests/: 01-get-corresponding.rs  02-invalid-weight.rs  02-invalid-weight.stderr  03-non-supported-argument.rs  03-non-supported-argument.stderr  04-get-corresponding-without-data.rs
relations_procmacro/: Cargo.toml
relations_procmacro/src/: lib.rs
relations_procmacro/tests/: 01-get-corresponding.rs  02-invalid-weight.rs  02-invalid-weight.stderr  03-non-supported-argument.rs  03-non-supported-argument.stderr  04-get-corresponding-without-data.rs  test_utils.rs
relations_procmacro_tests/: Cargo.toml
relations_procmacro_tests/tests/: 01-get-corresponding.rs  02-invalid-weight.rs  03-non-supported-argument.rs  04-get-corresponding-without-data.rs  tests.rs
src/: error.rs  lib.rs  relations.rs
