[package]
name = "relational_types"
description = "Manage relations between objects"
version = "2.0.0"
authors = ["Kisio Digital <team.coretools@kisio.org>", "Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/CanalTP/relational_types"
repository = "https://github.com/CanalTP/relational_types"
documentation = "https://docs.rs/relational_types"
readme = "README.md"

keywords = ["relation", "collection"]

[workspace]
members = [
  "relational_types_procmacro",
  "relational_types_procmacro_tests",
]

[dependencies]
derivative = "1"
relational_types_procmacro = { version = "2", path = "./relational_types_procmacro/", optional = true }
thiserror = "1"
typed_index_collection = "2"

[features]
default = ["relational_types_procmacro"]
