[package]
name = "relational_types"
description = "Manage relations between objects"
version = "2.1.0"
authors = ["Hove <team.coretools@kisio.org>", "Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/hove-io/relational_types"
repository = "https://github.com/hove-io/relational_types"
documentation = "https://docs.rs/relational_types"
readme = "README.md"

keywords = ["relation", "collection"]

[workspace]
members = [
  "relational_types_procmacro",
  "relational_types_procmacro_tests",
]

[dependencies]
derivative = "1"
relational_types_procmacro = { version = "2", path = "./relational_types_procmacro/", optional = true }
thiserror = "1"
typed_index_collection = { git = "https://github.com/hove-io/typed_index_collection", tag = "v2"}

[features]
default = ["relational_types_procmacro"]
