[package]
name = "relations_procmacro"
description = "Procmacro to help create relations between objects"
version = "1.0.0"
authors = ["Kisio Digital <team.coretools@kisio.org>", "Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/CanalTP/relations"
keywords = ["macro", "floyd_marshall"]
autotests = false

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[dev-dependencies]
pretty_assertions = "0.6"
trybuild = "1"
typed_index_collection = "1"
relations = { version = "1", path = "../" }

[[test]]
name = "tests"
path = "tests/tests.rs"
